# sgi

./: README
cmd/acl/: Makefile  README  configure.in
cmd/acl/chacl/: Makefile  chacl.c
cmd/acl/debian/: Makefile  changelog  control  rules
cmd/acl/doc/: CHANGES  COPYING  INSTALL  Makefile  PORTING
cmd/acl/include/: Makefile  acl.h  builddefs.in
cmd/acl/libacl/: Makefile  acl.c
cmd/acl/man/: Makefile
cmd/attr/: Makefile  Makepkgs  README  VERSION  configure.in
cmd/attr/attr/: Makefile  attr.c
cmd/attr/debian/: Makefile  changelog  control  rules
cmd/attr/doc/: CHANGES  COPYING  INSTALL  PORTING
cmd/attr/include/: Makefile  attr_kern.h  builddefs.in
cmd/attr/libattr/: Makefile  attr.c
cmd/attr/man/: Makefile
cmd/dmapi/: Makefile  VERSION  configure.in
cmd/dmapi/debian/: changelog  control  rules
cmd/dmapi/doc/: CHANGES  Makefile  PORTING
cmd/dmapi/include/: Makefile  builddefs.in  dmapi.h  dmapi_kern.h
cmd/dmapi/libdm/: Makefile  dm_attr.c  dm_bulkattr.c  dm_config.c  dm_dmattr.c  dm_event.c  dm_handle.c  dm_handle2path.c  dm_hole.c  dm_mountinfo.c  dm_rdwr.c  dm_region.c  dm_right.c  dm_session.c  dmapi_lib.c  dmapi_lib.h
cmd/dmapi/man/: Makefile
cmd/xfsdump/: Makefile  VERSION  configure.in
cmd/xfsdump/common/: Makefile  arch_xlate.c  arch_xlate.h  attr.c  attr.h  cldmgr.c  cldmgr.h  cleanup.c  cleanup.h  content.h  content_common.c  content_common.h  content_inode.h  dlog.c  dlog.h  drive.c  drive.h  drive_minrmt.c  drive_scsitape.c  drive_simple.c  (+35 more)
cmd/xfsmisc/: README  XFSgenPatch.pl  kiobuf_io.patch  mkinitrd.xfs  xfs_stats.pl
cmd/xfsprogs/: Makefile  README  configure.in
cmd/xfsprogs/bmap/: Makefile  xfs_bmap.c
cmd/xfsprogs/db/: Makefile  addr.c  addr.h  agf.c  agf.h  agfl.c  agfl.h  agi.c  agi.h  attr.c  attr.h  attrshort.c  attrshort.h  bit.c  bit.h  block.c  block.h  bmap.c  bmap.h  bmapbt.c  bmapbt.h  bmroot.c  bmroot.h  bnobt.c  bnobt.h  check.c  check.h  cntbt.c  cntbt.h  command.c  command.h  convert.c  convert.h  data.c  data.h  dbread.c  dbread.h  debug.c  debug.h  dir.c  (+65 more)
cmd/xfsprogs/debian/: changelog  control  copyright  rules
cmd/xfsprogs/doc/: CHANGES  CREDITS  INSTALL  Makefile  PORTING  README.LVM  README.quota
cmd/xfsprogs/fsck/: Makefile  xfs_fsck.c
cmd/xfsprogs/growfs/: Makefile  xfs_growfs.c  xfs_info.sh
cmd/xfsprogs/include/: Makefile  arch.h  builddefs.in  handle.h  jdm.h  liblvm.h  libxfs.h  lvm.h  lvm_config.h  lvm_log.h  lvm_user.h  md-int.h  platform_defs.h  platform_defs.h.in  xfs_ag.h  xfs_bit.h  xfs_bmap_btree.h  xfs_cred.h  xfs_da_btree.h  xfs_dinode.h  xfs_dir.h  xfs_dir2.h  xfs_dir2_leaf.h  xfs_dir2_node.h  xfs_dir_leaf.h  xfs_dquot_item.h  xfs_fs.h  xfs_imap.h  xfs_inode.h  xfs_inode_item.h  xfs_inum.h  xfs_log.h  xfs_log_priv.h  xfs_log_recover.h  xfs_mount.h  xfs_quota.h  xfs_sb.h  xfs_trans.h  xfs_types.h  xqm.h
cmd/xfsprogs/libhandle/: handle.c  jdm.c
cmd/xfsprogs/libxfs/: init.c  logitem.c  rdwr.c  trans.c  util.c  xfs.h  xfs_alloc.c  xfs_alloc_btree.c  xfs_attr_leaf.c  xfs_bit.c  xfs_bmap.c  xfs_bmap_btree.c  xfs_btree.c  xfs_da_btree.c  xfs_dir.c  xfs_dir2.c  xfs_dir2_block.c  xfs_dir2_data.c  xfs_dir2_leaf.c  xfs_dir2_node.c  xfs_dir2_sf.c  xfs_dir_leaf.c  xfs_ialloc.c  xfs_ialloc_btree.c  xfs_inode.c  xfs_mount.c  xfs_rtalloc.c  xfs_rtbit.c  xfs_support.c  xfs_trans.c
cmd/xfsprogs/logprint/: Makefile  log_print_all.c  log_print_trans.c  logprint.c  logprint.h
cmd/xfsprogs/man/: Makefile
cmd/xfsprogs/man/man3/: Makefile  handle.3
cmd/xfsprogs/man/man5/: Makefile  xfs.5
cmd/xfsprogs/man/man8/: Makefile  fsck.xfs.8  mkfs.xfs.8  xfs_admin.8  xfs_bmap.8  xfs_check.8  xfs_db.8  xfs_growfs.8  xfs_logprint.8  xfs_mkfile.8  xfs_ncheck.8  xfs_repair.8  xfs_rtcp.8
cmd/xfsprogs/mkfile/: Makefile  xfs_mkfile.c
cmd/xfsprogs/mkfs/: fstyp.c  maxtrres.c  maxtrres.h  mountinfo.c  mountinfo.h  proto.c  proto.h  volume.h  xfs_mkfs.c  xfs_mkfs.h
cmd/xfsprogs/repair/: README  agheader.c  agheader.h  attr_repair.c  attr_repair.h  avl.c  avl.h  avl64.c  avl64.h  bmap.c  bmap.h  dino_chunks.c  dinode.c  dinode.h  dir.c  dir.h  dir2.c  dir2.h  dir_stack.c  dir_stack.h  err_protos.h  globals.c  globals.h  incore.c  incore.h  incore_bmc.c  incore_ext.c  incore_ino.c  init.c  io.c  phase1.c  phase2.c  phase3.c  phase4.c  phase5.c  phase6.c  phase7.c  protos.h  rt.c  rt.h  (+6 more)
cmd/xfsprogs/rtcp/: Makefile  xfs_rtcp.c
cmd/xfsprogs/uuid/: gen_uuid_nt.c  uuid.h  uuidP.h  uuid_time.c
cmd/xfstests/: 050
dmapi/: Makefile  Status  dmapi_attr.c  dmapi_bulkattr.c  dmapi_config.c  dmapi_dmattr.c  dmapi_event.c  dmapi_handle.c  dmapi_hole.c  dmapi_io.c  dmapi_mountinfo.c  dmapi_private.h  dmapi_region.c  dmapi_register.c  dmapi_right.c  dmapi_session.c  dmapi_sysent.c
winnt/: _xfs_vfsops.c  _xfs_vnops.c  capability.h  xfs_behavior.c  xfs_behavior.h  xfs_cred.h  xfs_dmistubs.c  xfs_file.c  xfs_file.h  xfs_fs_subr.c  xfs_fs_subr.h  xfs_globals.c  xfs_globals.h  xfs_griostubs.c  xfs_ioctl.c  xfs_iops.h  xfs_linux.h  xfs_lrw.h  xfs_module.c  xfs_ntrw.c  xfs_ntrw.h  xfs_stats.c  xfs_stats.h  xfs_super.c  xfs_super.h  xfs_vfs.c  xfs_vfs.h  xfs_vnode.c  xfs_vnode.h  xfs_winnt.h
xfs/: mac_xfs.c  macstubs.c  xfs.h  xfs.rc  xfs_acl.c  xfs_acl.h  xfs_ag.h  xfs_alloc.c  xfs_alloc.h  xfs_alloc_btree.c  xfs_alloc_btree.h  xfs_arch.h  xfs_attr.c  xfs_attr.h  xfs_attr_fetch.c  xfs_attr_leaf.c  xfs_attr_leaf.h  xfs_attr_sf.h  xfs_bit.c  xfs_bit.h  xfs_bmap.c  xfs_bmap.h  xfs_bmap_btree.c  xfs_bmap_btree.h  xfs_btree.c  xfs_btree.h  xfs_buf.h  xfs_buf_item.c  xfs_buf_item.h  xfs_clnt.h  xfs_cxfs.h  xfs_da_btree.c  xfs_da_btree.h  xfs_dfrag.c  xfs_dfrag.h  xfs_dinode.h  xfs_dir.c  xfs_dir2.c  xfs_dir2_block.c  xfs_dir2_block.h  (+74 more)
xfs_support/: arch.h  atomic.h  debug.c  debug.h  kmem.c  kmem.h  ktrace.c  ktrace.h  move.c  move.h  mrlock.c  mrlock.h  mutex.c  mutex.h  qsort.c  qsort.h  sema.h  spin.h  support.c  support.h  sv.c  sv.h  time.h  types.h  uuid.c  uuid.h
xinc/: acl.h  attributes.h  behavior.h  dmapi.h  grio.h  xfs_fs.h
(+106 files in other folders)
